<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buttons">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idLogo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idStatus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:text="@string/clickButton"
        android:background="@drawable/stroke_cancel"
        android:textColor="@color/red"
        android:onClick="onClickStatus"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idAddmited"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/idStatus"
        app:layout_constraintStart_toEndOf="@id/idStatus"
        android:layout_marginLeft="5dp"
        android:background="@drawable/stroke_cancel"
        android:text="@string/notAdmitted"
        android:textColor="@color/red"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idClick"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/clickButton"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@id/idAddmited"
        app:layout_constraintTop_toTopOf="@id/idAddmited"
        app:layout_constraintBottom_toBottomOf="@id/idAddmited"
        tools:ignore="MissingConstraints"
        android:background="@drawable/custom"
        android:textColor="@color/white"
        android:onClick="onClickButton"
        />

    <TextView
        android:id="@+id/idClickText"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toEndOf="@+id/idClick"
        app:layout_constraintTop_toTopOf="@+id/idClick"
        app:layout_constraintBottom_toBottomOf="@+id/idClick"
        android:gravity="center"
        android:textColor="@color/logo"
        android:text="0"
        android:textSize="40dp"

        />
    <ImageView
        android:id="@+id/idLogo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo"
        android:onClick="onClickLogo"
        tools:ignore="SpeakableTextPresentCheck"
        />
    <DatePicker
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idStatus"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>